--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "fix": "^0.0.3",
+    "mailjet": "^0.0.1",
+    "node-mailjet": "^6.0.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
